force-app/main/default/objects/OB_Archiver__ArchivingPolicy__c/OB_Archiver__ArchivingPolicy__c.object-meta.xml
<CustomObject>
    <label>Policy</label>
    <nameField>
        <label>Policy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Policies (Deprecated)</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>