force-app/main/default/objects/OB_Archiver__ArchivingPolicy__c/fields/OB_Archiver__Is_Analyzed__c.field-meta.xml
<CustomField>
    <fullName>OB_Archiver__Is_Analyzed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Analyzed</label>
    <type>Checkbox</type>
</CustomField>