force-app/main/default/objects/OB_Archiver__ArchivingPolicy__c/fields/OB_Archiver__ScheduleTime__c.field-meta.xml
<CustomField>
    <fullName>OB_Archiver__ScheduleTime__c</fullName>
    <label>Schedule Time</label>
    <type>Time</type>
</CustomField>