force-app/main/default/objects/OB_Archiver__ArchivingPolicy__c/fields/OB_Archiver__SObjectNameFormula__c.field-meta.xml
<CustomField>
    <fullName>OB_Archiver__SObjectNameFormula__c</fullName>
    <formula>IF( ISBLANK( OB_Archiver__sObjectName2__c ), OB_Archiver__SObjectName__c , OB_Archiver__sObjectName2__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SObjectName</label>
    <type>Text</type>
</CustomField>