force-app/main/default/objects/OB_Archiver__ArchivingPolicy__c/fields/OB_Archiver__TimeStamp__c.field-meta.xml
<CustomField>
    <fullName>OB_Archiver__TimeStamp__c</fullName>
    <label>TimeStamp</label>
    <type>Date</type>
</CustomField>