force-app/main/default/objects/OB_Archiver__ArchivingPolicy__c/recordTypes/OB_Archiver__Archiving_Policy.recordType-meta.xml
<RecordType>
    <fullName>OB_Archiver__Archiving_Policy</fullName>
    <active>true</active>
    <description>Policy for objects that you wish to archive and remove from your Salesforce storage. It allows you to reduce storage and to keep your company’s compliance rules.</description>
    <label>Archiving Policy</label>
</RecordType>