force-app/main/default/objects/OB_Archiver__ArchivingPolicy__c/recordTypes/OB_Archiver__Purge_Policy.recordType-meta.xml
<RecordType>
    <fullName>OB_Archiver__Purge_Policy</fullName>
    <active>true</active>
    <description>Policy for objects to remove from your archive database. You can ensure compliance with data removal. Bypass the original expiration date determined when the data was archived, and permanently delete the data.</description>
    <label>Purge Policy</label>
</RecordType>