force-app/main/default/objects/OB_Archiver__ArchivingPolicy__c/listViews/OB_Archiver__All_Offered_Policies.listView-meta.xml
<ListView>
    <fullName>OB_Archiver__All_Offered_Policies</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>OB_Archiver__Active__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>OB_Archiver__policy_type__c</field>
        <operation>equals</operation>
        <value>Automatic</value>
    </filters>
    <label>All_Offered_Policies</label>
</ListView>